--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod",
+    "bigbuild": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cli": "1.3.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -21,8 +24,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
+    "mnist": "^1.1.0",
     "rxjs": "^5.4.2",
+    "synaptic": "^1.1.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
