--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js", // ng serve
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod && node server.js",
+    "postinstall": "ng build --aot -prod",
     "bigbuild": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
     "@angular/cli": "1.3.2",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -53,5 +54,9 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+    "engines": {
+        "node": "6.11.1",
+        "npm": "3.10.9"
+    }
 }
